# iCode

./: README.md  iCode_SW_Installation_Instructions.docx
iCodeDemo/applications/: CMakeLists.txt
iCodeDemo/applications/iCodeDemo/Inc/: exampleNFC.h  logger.h
iCodeDemo/applications/iCodeDemo/Src/: exampleNFC.c  logger.c  main.old
iCodeDemo/platform/Inc/: platform.h  pltf_gpio.h
iCodeDemo/platform/Src/: pltf_gpio.c  pltf_timer.c
iCodeDemo/rfal/: CMakeLists.txt
iCodeDemo/rfal/Inc/: rfal_dynamicPower.h  rfal_isoDep.h  rfal_nfcDep.h  rfal_nfca.h  rfal_nfcb.h  rfal_nfcf.h  rfal_rf.h
iCodeDemo/rfal/Src/: rfal_crc.c  rfal_dynamicPower.c  rfal_iso15693_2.h  rfal_isoDep.c  rfal_nfcDep.c  rfal_nfca.c  rfal_nfcb.c  rfal_nfcf.c  rfal_nfcv.c  rfal_st25tb.c
iCodeDemo/rfal/Src/st25r3911/: rfal_dynamicPowerTbl.h  rfal_features.h  rfal_rfst25r3911.c  st25r3911.c  st25r3911.h  st25r3911_com.c  st25r3911_com.h  st25r3911_interrupt.c  st25r3911_interrupt.h
iCodeDemo/rfal/doc/: Release_Notes.html  rfal.chm
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml  timestamps-192.168.1.182-pi-22  timestamps-rpi_3b.home-pi-22
rfal_v1.3.0/: .cproject  .project  CMakeLists.txt
rfal_v1.3.0/applications/: CMakeLists.txt
rfal_v1.3.0/applications/nfc_poller/Inc/: example_poller.h
rfal_v1.3.0/applications/nfc_poller/Src/: exampleRfalPoller.c  main.c
rfal_v1.3.0/platform/Inc/: platform.h  pltf_gpio.h  pltf_spi.h  pltf_timer.h
rfal_v1.3.0/platform/Src/: pltf_gpio.c  pltf_spi.c
rfal_v1.3.0/rfal/Inc/: rfal_analogConfig.h  rfal_chip.h  rfal_nfcv.h  rfal_st25tb.h  rfal_t1t.h
rfal_v1.3.0/rfal/Src/: rfal_analogConfig.c  (+4 more)
(+2 files in other folders)
